// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`F.once is activated asynchronously 1`] = `
Array [
  Sync {},
  Object {
    "s": "b",
    "x": Next {
      "value": "tsers",
    },
  },
  Object {
    "s": "a",
    "x": Next {
      "value": "tsers",
    },
  },
  Object {
    "s": "b",
    "x": End {},
  },
  Object {
    "s": "a",
    "x": End {},
  },
]
`;

exports[`F.once sends its value only one time 1`] = `
Array [
  Object {
    "s": "a",
    "x": Next {
      "value": "tsers",
    },
  },
  Object {
    "s": "a",
    "x": End {},
  },
  Object {
    "s": "b",
    "x": End {},
  },
]
`;

exports[`F.once sends single event and ends 1`] = `
Array [
  Next {
    "value": "tsers",
  },
  End {},
]
`;

exports[`F.once supports event wrappers such as Next and Error 1`] = `
Array [
  Next {
    "value": "tsers",
  },
  End {},
  Error {
    "error": "fuk",
  },
  End {},
]
`;
